<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_city"
        android:icon="@drawable/ic_location_city_white_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/action_weather_map"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
